// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesDropdown component renders CategoriesDropdown / All selected 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between m-10 max-w-full "
  >
    <div
      class="w-3/12 lg:w-6/12 md:w-4/12 sm:w-3/12 relative w-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left shadow-md"
    >
      <p
        class="overflow-hidden truncate "
      >
         Electronic, Furnitures, Clothing, Accessories
      </p>
    </div>
    <div
      class="w-8/12 lg:w-4/12 md:w-6/12 sm:w-8/12"
    >
      <div
        class="space-y-1"
      >
        <div
          class="relative"
        >
          <span
            class="inline-block w-full rounded-md shadow-sm "
          >
            <button
              aria-controls="headlessui-listbox-options-17"
              aria-expanded="false"
              aria-haspopup="true"
              class="cursor-default relative w-full rounded-md border border-gray-300 bg-white shadow-md pl-3 pr-10 py-2 text-left  transition ease-in-out duration-150"
              id="headlessui-listbox-button-15"
              type="button"
            >
              <span
                class="block truncate"
              >
                Categories
              </span>
              <span
                class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
              >
                <svg
                  class="ml-2 w-4 h-4"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 9l-7 7-7-7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </span>
            </button>
          </span>
          <div
            class="absolute mt-1 w-full rounded-md bg-white shadow-lg transition ease-in duration-100 opacity-100"
            hidden=""
            style="display: none;"
          >
            <ul
              aria-labelledby="headlessui-listbox-button-15"
              aria-orientation="vertical"
              class="max-h-60 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
              id="headlessui-listbox-options-17"
              role="listbox"
              tabindex="0"
            >
              <li
                id="headlessui-listbox-option-18"
                role="option"
                tabindex="-1"
              >
                <div
                  class="text-gray-900 cursor-default select-none relative py-2 pl-8 pr-4"
                >
                  <span
                    class="font-semibold block truncate"
                  >
                    Electronic
                  </span>
                  <span
                    class="text-blue-600 absolute inset-y-0 left-0 flex items-center pl-1.5"
                  >
                    <svg
                      class="h-5 w-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </li>
              <li
                id="headlessui-listbox-option-19"
                role="option"
                tabindex="-1"
              >
                <div
                  class="text-gray-900 cursor-default select-none relative py-2 pl-8 pr-4"
                >
                  <span
                    class="font-semibold block truncate"
                  >
                    Furnitures
                  </span>
                  <span
                    class="text-blue-600 absolute inset-y-0 left-0 flex items-center pl-1.5"
                  >
                    <svg
                      class="h-5 w-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </li>
              <li
                id="headlessui-listbox-option-20"
                role="option"
                tabindex="-1"
              >
                <div
                  class="text-gray-900 cursor-default select-none relative py-2 pl-8 pr-4"
                >
                  <span
                    class="font-semibold block truncate"
                  >
                    Clothing
                  </span>
                  <span
                    class="text-blue-600 absolute inset-y-0 left-0 flex items-center pl-1.5"
                  >
                    <svg
                      class="h-5 w-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </li>
              <li
                id="headlessui-listbox-option-21"
                role="option"
                tabindex="-1"
              >
                <div
                  class="text-gray-900 cursor-default select-none relative py-2 pl-8 pr-4"
                >
                  <span
                    class="font-semibold block truncate"
                  >
                    Accessories
                  </span>
                  <span
                    class="text-blue-600 absolute inset-y-0 left-0 flex items-center pl-1.5"
                  >
                    <svg
                      class="h-5 w-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CategoriesDropdown component renders CategoriesDropdown / One selected 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between m-10 max-w-full "
  >
    <div
      class="w-3/12 lg:w-6/12 md:w-4/12 sm:w-3/12 relative w-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left shadow-md"
    >
      <p
        class="overflow-hidden truncate "
      >
         Accessories
      </p>
    </div>
    <div
      class="w-8/12 lg:w-4/12 md:w-6/12 sm:w-8/12"
    >
      <div
        class="space-y-1"
      >
        <div
          class="relative"
        >
          <span
            class="inline-block w-full rounded-md shadow-sm "
          >
            <button
              aria-controls="headlessui-listbox-options-10"
              aria-expanded="false"
              aria-haspopup="true"
              class="cursor-default relative w-full rounded-md border border-gray-300 bg-white shadow-md pl-3 pr-10 py-2 text-left  transition ease-in-out duration-150"
              id="headlessui-listbox-button-8"
              type="button"
            >
              <span
                class="block truncate"
              >
                Categories
              </span>
              <span
                class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
              >
                <svg
                  class="ml-2 w-4 h-4"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 9l-7 7-7-7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </span>
            </button>
          </span>
          <div
            class="absolute mt-1 w-full rounded-md bg-white shadow-lg transition ease-in duration-100 opacity-100"
            hidden=""
            style="display: none;"
          >
            <ul
              aria-labelledby="headlessui-listbox-button-8"
              aria-orientation="vertical"
              class="max-h-60 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
              id="headlessui-listbox-options-10"
              role="listbox"
              tabindex="0"
            >
              <li
                id="headlessui-listbox-option-11"
                role="option"
                tabindex="-1"
              >
                <div
                  class="text-gray-900 cursor-default select-none relative py-2 pl-8 pr-4"
                >
                  <span
                    class="font-normal block truncate"
                  >
                    Electronic
                  </span>
                </div>
              </li>
              <li
                id="headlessui-listbox-option-12"
                role="option"
                tabindex="-1"
              >
                <div
                  class="text-gray-900 cursor-default select-none relative py-2 pl-8 pr-4"
                >
                  <span
                    class="font-normal block truncate"
                  >
                    Furnitures
                  </span>
                </div>
              </li>
              <li
                id="headlessui-listbox-option-13"
                role="option"
                tabindex="-1"
              >
                <div
                  class="text-gray-900 cursor-default select-none relative py-2 pl-8 pr-4"
                >
                  <span
                    class="font-normal block truncate"
                  >
                    Clothing
                  </span>
                </div>
              </li>
              <li
                id="headlessui-listbox-option-14"
                role="option"
                tabindex="-1"
              >
                <div
                  class="text-gray-900 cursor-default select-none relative py-2 pl-8 pr-4"
                >
                  <span
                    class="font-semibold block truncate"
                  >
                    Accessories
                  </span>
                  <span
                    class="text-blue-600 absolute inset-y-0 left-0 flex items-center pl-1.5"
                  >
                    <svg
                      class="h-5 w-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CategoriesDropdown component renders CategoriesDropdown 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between m-10 max-w-full "
  >
    <div
      class="w-3/12 lg:w-6/12 md:w-4/12 sm:w-3/12 relative w-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left shadow-md"
    >
      <p
        class="overflow-hidden truncate "
      >
        All categories
      </p>
    </div>
    <div
      class="w-8/12 lg:w-4/12 md:w-6/12 sm:w-8/12"
    >
      <div
        class="space-y-1"
      >
        <div
          class="relative"
        >
          <span
            class="inline-block w-full rounded-md shadow-sm "
          >
            <button
              aria-controls="headlessui-listbox-options-6"
              aria-expanded="false"
              aria-haspopup="true"
              class="cursor-default relative w-full rounded-md border border-gray-300 bg-white shadow-md pl-3 pr-10 py-2 text-left  transition ease-in-out duration-150"
              id="headlessui-listbox-button-1"
              type="button"
            >
              <span
                class="block truncate"
              >
                Categories
              </span>
              <span
                class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
              >
                <svg
                  class="ml-2 w-4 h-4"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 9l-7 7-7-7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </span>
            </button>
          </span>
          <div
            class="absolute mt-1 w-full rounded-md bg-white shadow-lg transition ease-in duration-100 opacity-100"
            hidden=""
            style="display: none;"
          >
            <ul
              aria-labelledby="headlessui-listbox-button-1"
              aria-orientation="vertical"
              class="max-h-60 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
              id="headlessui-listbox-options-6"
              role="listbox"
              tabindex="0"
            >
              <li
                id="headlessui-listbox-option-2"
                role="option"
                tabindex="-1"
              >
                <div
                  class="text-gray-900 cursor-default select-none relative py-2 pl-8 pr-4"
                >
                  <span
                    class="font-normal block truncate"
                  >
                    Electronic
                  </span>
                </div>
              </li>
              <li
                id="headlessui-listbox-option-3"
                role="option"
                tabindex="-1"
              >
                <div
                  class="text-gray-900 cursor-default select-none relative py-2 pl-8 pr-4"
                >
                  <span
                    class="font-normal block truncate"
                  >
                    Furnitures
                  </span>
                </div>
              </li>
              <li
                id="headlessui-listbox-option-4"
                role="option"
                tabindex="-1"
              >
                <div
                  class="text-gray-900 cursor-default select-none relative py-2 pl-8 pr-4"
                >
                  <span
                    class="font-normal block truncate"
                  >
                    Clothing
                  </span>
                </div>
              </li>
              <li
                id="headlessui-listbox-option-5"
                role="option"
                tabindex="-1"
              >
                <div
                  class="text-gray-900 cursor-default select-none relative py-2 pl-8 pr-4"
                >
                  <span
                    class="font-normal block truncate"
                  >
                    Accessories
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
